Added UpdateUser method for Discord snowflakes
